<resources>
    <string name="app_name">WorkAssist</string>
    <string name="siteSelector">Select the Site Under Construction</string>
    <string name="addSite">Add a new site</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">"New User ? Register"</string>
    <string name="addSiteHead">Enter the details of new Site</string>
    <string name="add">Add</string>
    <string name="ownerNameHint">Owner Name(*)</string>
    <string name="sqFeetHint">Enter Square Feet(*)</string>
    <string name="locationHint">Location Of the Site(*)</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="remark">Remarks(Optional)</string>
    <string name="options">Options</string>
    <string name="site_details">Site Details</string>
    <string name="amount_spent">Amount Spent</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="balance_amount">Balance Amount</string>
    <array name="workList">
        <item>Concrete Works</item>
        <item>Construction of Walls</item>
        <item>Roofing</item>
        <item>Plastering Work</item>
        <item>Fixing of Doors and Windows</item>
        <item>Electrical Works</item>
        <item>Plumbing Works</item>
        <item>Tiles Laying</item>
        <item>Painting</item>
    </array>
</resources>